--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="send">Send</string>
     <string name="moments_detail">What is in your mind</string>
     <string name="finish">Finish</string>
-    <string name="take_photo">Take Picture</string>
+    <string name="take_photo">Take Pictures</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="facebook_app_id">915641231846809</string>
